--- a/jenkinsfile
+++ b/jenkinsfile
@@ -15,5 +15,14 @@ stages {
             sh "bundle install"
         }
     }
+    stage (Run Features){
+     steps {
+       sh "cucumber"
+
+     }
+
+
+    }
+
  }
 }  
